5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1646_87.log
== TEST (2019-04-15 22:26:37) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

e = a>b
d = a>c
f = a>b>c
print(f)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:39) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

e = a>b>c

f = a>b>c


print(e)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:31:05) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b>c
e = c>b>a
f = b>c>a
f = a>b>c


print(e)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:31:47) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b>c
e = c>b>a
f = b>c>a


print(d," ",e," ",f)

-- OUTPUT:
False   False   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:34:15) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = c>b
f = b>c


print(d," ",e," ",f)

-- OUTPUT:
False   False   True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:35:58) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = a>c
f = b>a
g = b>c
h = c>a
i = c>b
j = 
k = 



print(d," ",e," ",f)

-- ERROR:
File "XXXX", line 11
    j = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:36:35) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = a>c
f = b>a
g = b>c
h = c>a
i = c>b




print(d," ",e," ",f," ",g," ",h," ",i)

-- OUTPUT:
False   True   True   True   False   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:50) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b and a>c
e = b>a and b>c
f = c>b and c>a




print(d," ",e," ",f," ",g," ",h," ",i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(d," ",e," ",f," ",g," ",h," ",i)
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:05) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b and a>c
e = b>a and b>c
f = c>b and c>a




print(d," ",e," ",f)

-- OUTPUT:
False   True   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:46:31) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = b>c
if d == True and e == True:
	print(c)
-- OUTPUT:
False   True   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:46:37) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = b>c
if d == True and e == True:
	print(c)
-- EXECUTION TIME:
0.183355
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:

-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:46:38) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = b>c
if d == True and e == True:
	print(c)
-- OUTPUT:
False   True   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:44) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

d = a>b
e = b>c

f = b>a
g = b>c

h = c>b
i = c>a


if d == True and e==True:
	print(c)
	
-- OUTPUT:
False   True   False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:23:51) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == True:
		if(b>a) == False:
			if(b>c) == True:
				if(c<a) == True:
					if(c<b) == True:
						print(c)
if (a>b) == False:
	if (a>c) == False:
		if(b>a) == True:
			if(b>c) == True:
				if(c<a) == False:
					if(c<b) == False:
						print(a)
if (a>b) == False:
	if (a>c) == False:
		if(b>a) == True:
			if(b>c) == True:
				if(c<a) == False:
					if(c<b) == False:
						print(b)

			
-- EXECUTION TIME:
0.159423
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:

-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:59:47) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True or (b<c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:		
		if(b>c) == True:			
			print(c)

			
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:59:52) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True or (b<c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:		
		if(b>c) == True:			
			print(c)

			
-- EXECUTION TIME:
0.186842
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
